--- a/app/src/main/res/layout/activity_symptom_tracker.xml
+++ b/app/src/main/res/layout/activity_symptom_tracker.xml
@@ -42,7 +42,7 @@
             android:id="@+id/bAbdominalPain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#673AB7"
+            android:background="#FFAB40"
             android:onClick="abdominalPain"
             android:text="Abdominal Pain" />
 
@@ -102,6 +102,7 @@
         android:layout_width="340dp"
         android:layout_height="45dp"
         android:backgroundTint="#E91E63"
+        android:onClick="submit"
         android:text="Submit"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
