--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="cursive"
-        android:text="Recommendations"
+        android:text="@string/diag"
         android:textColor="#673AB7"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
